--- a/JobPrediction/templates/Contact/contact.html
+++ b/JobPrediction/templates/Contact/contact.html
@@ -3,55 +3,50 @@
 
 {% block body %}
     <br>
-    <h1 class="text-center text-white">Contact Us</h1>
+
     <div class="container">
         <h2 class="text-white">My Team</h2>
-        <div class="row">
-            <div class="col-sm-3 mx-4">
-                <div class="card" style="width: 18rem;">
-                    <!--<img src="{% static 'images/ravi.jpg' %}" style="height: 220px" class="card-img-top" alt="...">-->
-                    <div class="card-body">
-                        <h5 class="card-title">Ravi Yadav</h5>
-                        <p class="card-text">7081414159</p>
-                        <p class="card-text">raviyadavitup@gmail.com</p>
-                        <p class="card-text">Web Developer Programmer</p>
-                    </div>
+        <div class="container">
+            <div class="row">
+                <div class="offset-sm-2 col-md-3 bg-white px-3" style="border: 2px solid black; border-radius: 10px;" >
+                    <center>
+                    <img src="{% static 'images/team/Ravi.jpg' %}" style="height: 180px;width:200px; " class="rounded-circle"><br>
+                    <span>Ravi Yadav</span><br>
+                    <span>7081414159</span><br>
+                    <span>raviyadavitup@gmail.com</span>
+                        </center>
+                </div>
+                <div class="offset-sm-2 col-md-3 bg-white px-3" style="border: 2px solid black; border-radius: 10px;" >
+                    <center>
+                    <img src="{% static 'images/Anu.jpeg' %}" style="height: 180px;width:200px; " class="rounded-circle"><br>
+                    <span>Anurag Kumar</span><br>
+                    <span>7081414159</span><br>
+                    <span>annukamaljnv@gmail.com</span>
+                        </center>
                 </div>
             </div>
-            <div class="col-sm-3 mx-4">
-                <div class="card" style="width: 18rem;">
-                    <img src="{% static 'images/Anu.jpeg' %}" class="rounded-circle" style="height: 210px" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Anurag Kumar</h5>
-                        <p class="card-text">9793439321</p>
-                        <p class="card-text">annukamaljnv@gmail.com</p>
-                        <p class="card-text">ML Programmer</p>
-                    </div>
+            <hr>
+            <div class="row">
+                <div class="offset-sm-2 col-md-3 bg-white px-3" style="border: 2px solid black; border-radius: 10px;" >
+                    <center>
+                    <img src="{% static 'images/Abhi.jpeg' %}" style="height: 180px;width:200px; " class="rounded-circle"><br>
+                    <span>Abhishek Kumar Shukla</span><br>
+                    <span>7081414159</span><br>
+                    <span>raviyadavitup@gmail.com</span>
+                        </center>
                 </div>
-            </div>
-            <div class="col-sm-3 mx-4">
-                <div class="card" style="width: 18rem;">
-                    <!--<img src="{% static 'images/Abhi.jpeg' %}" style="height: 220px" class="card-img-top" alt="...">-->
-                    <div class="card-body">
-                        <h5 class="card-title">Abhishek Shukla</h5>
-                        <p class="card-text">9794713175</p>
-                        <p class="card-text">shuklaabhishek056@gmail.com</p>
-                        <p class="card-text">Dataset Collector</p>
-                    </div>
-                </div>
-            </div><br>
-            <div class="col-sm-3 mx-4 pt-3">
-                <div class="card" style="width: 18rem;">
-                    <!--<img src="{% static 'images/' %}" style="height: 220px" class="card-img-top" alt="...">-->
-                    <div class="card-body">
-                        <h5 class="card-title">Pranjal Raman Srivastava</h5>
-                        <p class="card-text">9794713175</p>
-                        <p class="card-text">pranjal056@gmail.com</p>
-                        <p class="card-text">Paper Writing</p>
-                    </div>
+                <div class="offset-sm-2 col-md-3 bg-white px-3" style="border: 2px solid black; border-radius: 10px;" >
+                    <center>
+                    <img src="{% static 'images/team/Pranjal.jpg' %}" style="height: 180px;width:200px; " class="rounded-circle"><br>
+                    <span>Pranjal Raman Srivastava</span><br>
+                    <span>7081414159</span><br>
+                    <span>raviyadavitup@gmail.com</span>
+                        </center>
                 </div>
             </div>
         </div>
-    </div>
 
+
+    </div>
+    <br><br><br><br>
 {% endblock %}
